fix(ie9): Fix issue on IE9 while moving tasks when bounds is defined
Close #302

--- a/assets/angular-gantt.css
+++ b/assets/angular-gantt.css
@@ -290,6 +290,8 @@
 
     height: 100%;
     width: 100%;
+
+    z-index: 100;
 }
 
 .gantt-task-content {
